# mallardscript

./: .envrc.sh  .vimspector.json  Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
tests/: test_mallardscript.rs
