[package]
name = "mallardscript"
version = "7.0.0"
description = "Hak5 DuckyScript extended language compiler."
license-file = "LICENSE"
documentation = "https://github.com/Nate-Wilkins/mallardscript"
homepage = "https://github.com/Nate-Wilkins/mallardscript"
repository = "https://github.com/Nate-Wilkins/mallardscript"
authors = ["nate-wilkins <nate-wilkins@code-null.com>"]

[dependencies]
anyhow = "1.0.38"
pest_duckyscript = "14.0.0"
log = "0.4.17"
clap = "2.33.1"
clap_complete = "4.0.7"
shellexpand = "2.1.0"
env_logger = "0.10.0"

[dev-dependencies]
assert_cmd = "0.10"
predicates = "1"
pretty_assertions = "1.3.0"
tempfile = "3.3.0"
